<resources>
    <string name="app_name">Online Store App</string>
    <string name="please_enter_an_email_address">Please enter an email address...</string>
    <string name="please_enter_the_password">Please enter the password...</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="please_enter_an_username">Please enter an username</string>
    <string name="please_re_enter_the_password">Please re-enter the password..</string>
    <string name="please_choose_a_brand">Please Choose a brand</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="id">id</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_amount">Enter amount...</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="verify_order_item">Verify Order Item</string>
    <string name="decline_order_item">Decline Order Item</string>
</resources>