<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80ff00"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgLogin"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/login" />

    <EditText
        android:id="@+id/edtLoginEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:drawableEnd="@drawable/email"
        android:ems="12"
        android:hint="@string/please_enter_an_email_address"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="#0000ff"
        android:textColorHint="#808080" />

    <EditText
        android:id="@+id/edtLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:drawableEnd="@drawable/password"
        android:ems="12"
        android:hint="@string/please_enter_the_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="#00f"
        android:textColorHint="#808080" />


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="#f5f"
        android:text="@string/login"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btnLoginSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="#f00"
        android:text="@string/signup"
        android:textSize="30sp" />

</LinearLayout>